--- a/index.html
+++ b/index.html
@@ -20,99 +20,96 @@
 </head>
 <body class="theme-default" style="position:relative;">
 
-  <!-- Theme Selector Dropdown (nur im Bearbeitungsmodus sichtbar) -->
-  <div id="themeSelector" style="display:none; position: absolute; top: 1rem; left: 1rem; z-index: 1000; background:#fff; padding: 0.3rem 0.5rem; border-radius: 6px; box-shadow: 0 0 6px rgba(0,0,0,0.1); font-family: sans-serif;">
-    <label for="themeDropdown" style="font-weight:bold; font-size:0.9rem; margin-right: 0.5rem; user-select:none;">🎨 Theme:</label>
-    <select id="themeDropdown" aria-label="Theme auswählen">
-      <option value="boho">Boho</option>
-      <option value="creme">Creme</option>
-      <option value="chocolate">Chocolate</option>
-      <option value="sunset">Sunset</option>
-      <option value="minimal">Minimal</option>
-    </select>
+  <!-- LOGIN CONTAINER -->
+  <div id="loginContainer" style="text-align:center; padding:2rem;">
+    <h2>Registrierung</h2>
+    <input id="inputName" placeholder="Dein Name" style="padding:0.5rem; font-size:1rem;" />
+    <button id="registerBtn" style="padding:0.5rem 1rem; margin-top:1rem; cursor:pointer;">Registrieren & SmartBio erstellen</button>
   </div>
 
-  <!-- Bearbeiten Button oben rechts -->
-  <button id="editModeBtn" style="position:absolute; top:1rem; right:1rem; z-index:1000; padding: 0.4rem 0.8rem; border:none; border-radius:4px; background:#e6735f; color:#fff; cursor:pointer; font-weight:bold;">
-    Bearbeiten
-  </button>
-
-  <div class="container">
-
-    <!-- Header mit neuem modernem Aufbau -->
-    <div class="header">
-      <h1>
-        <span class="header-brand">SmartBio</span>
-        <span class="header-collab">×</span>
-        <span class="header-username">linaandtheboys</span>
-      </h1>
-      <img src="https://via.placeholder.com/120" alt="Profilbild" class="profile-img" />
+  <!-- CONTENT CONTAINER -->
+  <div id="contentContainer" style="display:none;">
+    <!-- Theme Selector Dropdown (nur im Bearbeitungsmodus sichtbar) -->
+    <div id="themeSelector" style="display:none; position: absolute; top: 1rem; left: 1rem; z-index: 1000; background:#fff; padding: 0.3rem 0.5rem; border-radius: 6px; box-shadow: 0 0 6px rgba(0,0,0,0.1); font-family: sans-serif;">
+      <label for="themeDropdown" style="font-weight:bold; font-size:0.9rem; margin-right: 0.5rem; user-select:none;">🎨 Theme:</label>
+      <select id="themeDropdown" aria-label="Theme auswählen">
+        <option value="boho">Boho</option>
+        <option value="creme">Creme</option>
+        <option value="chocolate">Chocolate</option>
+        <option value="sunset">Sunset</option>
+        <option value="minimal">Minimal</option>
+      </select>
     </div>
 
-    <p class="intro" id="bioText">Hi, ich bin Lina & ich liebe Content Creation mit meinen Katzen!</p>
+    <!-- Bearbeiten Button oben rechts -->
+    <button id="editModeBtn" style="position:absolute; top:1rem; right:1rem; z-index:1000; padding: 0.4rem 0.8rem; border:none; border-radius:4px; background:#e6735f; color:#fff; cursor:pointer; font-weight:bold;">
+      Bearbeiten
+    </button>
 
-    <div class="buttons" id="mainButtons">
-      <div class="btn cta">Kooperationsanfrage senden</div>
-      <div class="btn">Media Kit öffnen</div>
-    </div>
+    <div class="container">
+      <!-- Header mit neuem modernem Aufbau -->
+      <div class="header">
+        <h1>
+          <span class="header-brand">SmartBio</span>
+          <span class="header-collab">×</span>
+          <span class="header-username" id="headerUsername">linaandtheboys</span>
+        </h1>
+        <img src="https://via.placeholder.com/120" alt="Profilbild" class="profile-img" />
+      </div>
 
-    <div class="tiles" id="tilesContainer">
-      <div class="tile-row">
-        <div class="tile" contenteditable="false">
-          Mjamjam Code: Selina10
-          <img src="https://via.placeholder.com/300x200?text=Mjamjam" alt="Mjamjam" />
+      <p class="intro" id="bioText">Hi, ich bin Lina & ich liebe Content Creation mit meinen Katzen!</p>
+
+      <div class="buttons" id="mainButtons">
+        <div class="btn cta">Kooperationsanfrage senden</div>
+        <div class="btn">Media Kit öffnen</div>
+      </div>
+
+      <div class="tiles" id="tilesContainer">
+        <div class="tile-row">
+          <div class="tile" contenteditable="false">
+            Mjamjam Code: Selina10
+            <img src="https://via.placeholder.com/300x200?text=Mjamjam" alt="Mjamjam" />
+          </div>
+          <div class="tile" contenteditable="false">
+            LucyBalu Code: Selina10
+            <img src="https://via.placeholder.com/300x200?text=LucyBalu" alt="LucyBalu" />
+          </div>
         </div>
+
         <div class="tile" contenteditable="false">
-          LucyBalu Code: Selina10
-          <img src="https://via.placeholder.com/300x200?text=LucyBalu" alt="LucyBalu" />
+          Lieblingsprodukte
+          <img src="https://via.placeholder.com/300x200?text=Lieblingsprodukte" alt="Lieblingsprodukte" />
+        </div>
+
+        <div class="tile add-tile" onclick="zeigeKachelOptionen()">+</div>
+
+        <div class="kachel-optionen" id="kachelOptionen" style="display:none;">
+          <button onclick="addTile('full')">Rechteckig – ganze Breite</button>
+          <button onclick="addTile('half')">Rechteckig – halbe Breite</button>
+          <button onclick="addTile('square')">Quadratisch</button>
         </div>
       </div>
 
-      <div class="tile" contenteditable="false">
-        Lieblingsprodukte
-        <img src="https://via.placeholder.com/300x200?text=Lieblingsprodukte" alt="Lieblingsprodukte" />
+      <div class="social-section">
+        <div class="social-item">
+          <img class="social-icon" src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram" />
+          <a class="social-link" href="https://instagram.com/linaandtheboys" target="_blank">@linaandtheboys</a>
+          <span style="margin-left:auto">9.800 Follower</span>
+        </div>
+        <div class="social-item">
+          <img class="social-icon" src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png" alt="TikTok" />
+          <a class="social-link" href="#" target="_blank">@linaandtheboys</a>
+          <span style="margin-left:auto">4.300 Follower</span>
+        </div>
+        <div class="social-item">
+          <img class="social-icon" src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn" />
+          <a class="social-link" href="#" target="_blank">/lina-katzen</a>
+          <span style="margin-left:auto">1.200 Kontakte</span>
+        </div>
       </div>
 
-      <div class="tile add-tile" onclick="zeigeKachelOptionen()">+</div>
-
-      <div class="kachel-optionen" id="kachelOptionen" style="display:none;">
-        <button onclick="addTile('full')">Rechteckig – ganze Breite</button>
-        <button onclick="addTile('half')">Rechteckig – halbe Breite</button>
-        <button onclick="addTile('square')">Quadratisch</button>
-      </div>
+      <footer>© 2025 SmartBio</footer>
     </div>
-
-    <div class="social-section">
-      <div class="social-item">
-        <img
-          class="social-icon"
-          src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png"
-          alt="Instagram"
-        />
-        <a class="social-link" href="https://instagram.com/linaandtheboys" target="_blank">@linaandtheboys</a>
-        <span style="margin-left:auto">9.800 Follower</span>
-      </div>
-      <div class="social-item">
-        <img
-          class="social-icon"
-          src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png"
-          alt="TikTok"
-        />
-        <a class="social-link" href="#" target="_blank">@linaandtheboys</a>
-        <span style="margin-left:auto">4.300 Follower</span>
-      </div>
-      <div class="social-item">
-        <img
-          class="social-icon"
-          src="https://cdn-icons-png.flaticon.com/512/174/174857.png"
-          alt="LinkedIn"
-        />
-        <a class="social-link" href="#" target="_blank">/lina-katzen</a>
-        <span style="margin-left:auto">1.200 Kontakte</span>
-      </div>
-    </div>
-
-    <footer>© 2025 SmartBio</footer>
   </div>
 
   <script src="script.js"></script>
