--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <label for="emailInput">E-Mail</label>
       <input type="email" id="emailInput" placeholder="Deine E-Mail" required />
       <label for="passwordInput">Passwort</label>
-      <input type="password" id="passwordInput" placeholder="Mindestens 6 Zeichen" minlength="6" required />
+      <input type="password" id="passwordInput" placeholder="Mindestens 6 Zeichen" minlength="6" required autocomplete="new-password" />
       <button id="authSubmitBtn">Registrieren & SmartBio erstellen</button>
     </form>
     <div class="toggle-login" id="toggleLoginText">Schon registriert? <span id="toggleLoginLink" style="color: var(--cta);">Hier einloggen</span></div>
