--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <h2 id="formTitle">Registrieren</h2>
     <form id="authForm" autocomplete="off" onsubmit="return false;">
       <label for="emailInput">E-Mail</label>
-      <input type="email" id="emailInput" placeholder="Deine E-Mail" required />
+      <input <input type="email" id="emailInput" placeholder="Deine E-Mail" required autocomplete="username" />
       <label for="passwordInput">Passwort</label>
       <input type="password" id="passwordInput" placeholder="Mindestens 6 Zeichen" minlength="6" required autocomplete="new-password" />
       <button id="authSubmitBtn">Registrieren & SmartBio erstellen</button>
