--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <span class="header-collab">×</span>
           <span class="header-username" id="headerUsername">linaandtheboys</span>
         </h1>
-        <img src="https://placekitten.com/120/120 alt="Profilbild" class="profile-img" />
+        <img src=.images/placeholder alt="Profilbild" class="profile-img" />
       </div>
 
       <p class="intro" id="bioText">Hi, ich bin Lina & ich liebe Content Creation mit meinen Katzen!</p>
@@ -148,17 +148,17 @@
         <div class="tile-row">
           <div class="tile" contenteditable="false">
             Mjamjam Code: Selina10
-            <img src="https://placekitten.com/120/120" alt="Mjamjam" />
+            <img src=.images/placeholder alt="Mjamjam" />
           </div>
           <div class="tile" contenteditable="false">
             LucyBalu Code: Selina10
-            <img src="https://placekitten.com/120/120" alt="LucyBalu" />
+            <img src=.images/placeholder alt="LucyBalu" />
           </div>
         </div>
 
         <div class="tile" contenteditable="false">
           Lieblingsprodukte
-          <img src="https://placekitten.com/120/120" alt="Lieblingsprodukte" />
+          <img src=.images/placeholder alt="Lieblingsprodukte" />
         </div>
 
         <div class="tile add-tile" onclick="zeigeKachelOptionen()">+</div>
