--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@
 <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore-compat.js"></script>
 
+<div id="toastContainer"></div>
+
 <body class="theme-default" style="position:relative;">
 
   <!-- Fixer Header immer sichtbar -->
