--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <input type="email" id="emailInput" placeholder="Deine E-Mail" required autocomplete="username" />
       <label for="passwordInput">Passwort</label>
       <input type="password" id="passwordInput" placeholder="Mindestens 6 Zeichen" minlength="6" required autocomplete="new-password" />
-      <button id="registerBtn" type="button">Registrieren & SmartBio erstellen</button>
+      <button id="registerBtn" type="submit">Registrieren & SmartBio erstellen</button>
     </form>
     <div class="toggle-login" id="toggleLoginText">Schon registriert? <span id="toggleLoginLink" style="color: var(--cta); cursor:pointer;">Hier einloggen</span></div>
     <div id="authMessage" style="margin-top:1rem; color: red;"></div>
