--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
       <!-- Header mit neuem modernem Aufbau -->
       <div class="header">
         <h1>
-          <span class="header-brand">SmartBio</span>
-          <span class="header-collab">×</span>
-          <span class="header-username" id="headerUsername">linaandtheboys</span>
-        </h1>
+    <span class="header-brand">SmartBio</span>
+    <span class="header-collab">X</span>
+    <span class="header-username" id="headerUsername" contenteditable="false" spellcheck="false">linaandtheboys</span>
+  </h1>
         <img src="images/placeholder.png" alt="Profilbild" class="profile-img" />
       </div>
 
