--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
       <footer>© 2025 SmartBio</footer>
     </div>
   </div>
-  
+
 <!-- Popup Overlay für Kachel hinzufügen -->
 <div id="tilePopup" class="tile-popup hidden">
   <div class="tile-popup-content">
@@ -236,9 +236,9 @@
       Bild-URL:
       <input type="url" id="tileImageInput" placeholder="https://example.com/image.jpg" />
     </label>
-    <div class="tile-popup-buttons">
-      <button id="tileAddBtn">Hinzufügen</button>
-      <button id="tileCancelBtn">Abbrechen</button>
+    
+    <button id="saveTileBtn" style="background: #4CAF50; color: white; padding: 0.5rem 1rem; border:none; border-radius: 8px; cursor:pointer; margin-right: 0.5rem;">Speichern</button>
+    <button id="cancelTileBtn" style="background: #ccc; color: #333; padding: 0.5rem 1rem; border:none; border-radius: 8px; cursor:pointer;">Abbrechen</button>
     </div>
   </div>
 </div>
