--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@
       <input type="url" id="tileImageInput" placeholder="https://example.com/image.jpg" />
     </label>
     
-    <button id="saveBtn" style="background: #4CAF50; color: white; padding: 0.5rem 1rem; border:none; border-radius: 8px; cursor:pointer; margin-right: 0.5rem;">Speichern</button>
-    <button id="cancelBtn" style="background: #ccc; color: #333; padding: 0.5rem 1rem; border:none; border-radius: 8px; cursor:pointer;">Abbrechen</button>
+    <button id="saveTileBtn" style="background: #4CAF50; color: white; padding: 0.5rem 1rem; border:none; border-radius: 8px; cursor:pointer; margin-right: 0.5rem;">Speichern</button>
+    <button id="cancelTileBtn" style="background: #ccc; color: #333; padding: 0.5rem 1rem; border:none; border-radius: 8px; cursor:pointer;">Abbrechen</button>
     </div>
   </div>
 </div>
