--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
       <label for="passwordInput">Passwort</label>
       <input type="password" id="passwordInput" placeholder="Mindestens 6 Zeichen" minlength="6" required autocomplete="new-password" />
       <button id="registerBtn" type="submit">Registrieren & SmartBio erstellen</button>
+      <button type="submit">Anmelden</button>
     </form>
     <div class="toggle-login" id="toggleLoginText">Schon registriert? <span id="toggleLoginLink" style="color: var(--cta); cursor:pointer;">Hier einloggen</span></div>
     <div id="authMessage" style="margin-top:1rem; color: red;"></div>
