--- a/index.html
+++ b/index.html
@@ -172,6 +172,11 @@
         <div class="btn">Media Kit öffnen</div>
       </div>
 
+      <div id="mainContent" style="display: none;">
+      <!-- Dein sichtbarer Bereich nach dem Login -->
+      </div>
+
+
       <div class="tiles" id="tilesContainer">
         <div class="tile-row">
           <div class="tile" contenteditable="false">
