--- a/index.html
+++ b/index.html
@@ -249,5 +249,7 @@
 </div>
 
   <script src="./js/script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
+
 </body>
 </html>
