--- a/index.html
+++ b/index.html
@@ -158,6 +158,8 @@
 </script>
   
 </head>
+<link href="https://cdn.jsdelivr.net/npm/gridstack@8.2.2/dist/gridstack.min.css" rel="stylesheet" />
+
 <!-- Firebase SDKs -->
 <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
@@ -294,8 +296,10 @@
   </div>
 </div>
 
-  <script src="./js/script.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/gridstack@8.2.2/dist/gridstack.all.js"></script>
+<script src="./js/script.js"></script>
+<script src="./js/gridstack-init.js"></script>
+
 
 </body>
 </html>
