--- a/index.html
+++ b/index.html
@@ -294,10 +294,8 @@
   </div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/gridstack@8.2.2/dist/gridstack.all.js"></script>
-<script src="./js/script.js"></script>
-
-
+  <script src="./js/script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
 
 </body>
 </html>
